Fix spacing

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -14,7 +14,6 @@
 .link {
   color: Aquamarine;
   font-size: 16px;
-  text-decoration-line: underline;
 }
 
 .copyright {
